# n8n-job-radar

./: .gitattributes  .gitignore  README.md  config.yaml  models.py  old_jobspy_scraper.txt  pyproject.toml  requirements.txt  start.sh
api/: __init__.py  main.py  models.py  scorer.py  scraper.py
n8n/: README.md  workflow.json
scripts/: run.ps1  run.sh
tests/: test_models.py  test_scoring_integration.py  test_scraper_filters.py
