[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-radar"
version = "0.1.0"
description = "Personal job radar: scrapes and rule-scores listings via python-jobspy and FastAPI."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]>=0.30.0",
    "python-jobspy==1.1.82",
    "pydantic==2.12.5",
    "pyyaml>=6.0.2",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
job-radar = "api.main:main"

[tool.setuptools.packages.find]
include = ["api*"]
exclude = ["tests*", "cache*", ".venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
